syntax = "proto3";

package com.winter.proto;

option java_package = "com.winter.msg";
option java_outer_classname = "CollectMsg";

message ReqCollect {
    int32 resource_type = 1; //资源类型 1表示煤炭 2表示木材 3表示食物
    int32 amount = 2; //采集数量
}

message RespCollect {
   int32 code = 1; //响应码 0表示成功 1表示失败
   string msg = 2; //响应消息 采集失败时的错误消息
   int64 playerid = 3; //玩家ID 采集成功后服务器分配的唯一玩家ID
}
